--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "^3.6.2",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
