--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
-    "expo": "^50.0.11",
+    "expo": "^50.0.14",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "^3.6.2",
     "react-native-svg": "^14.1.0",
