--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^50.0.15",
+    "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
