--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "^0.73.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-reanimated": "^3.6.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
