Admin DashBoard Changed

--- a/app.json
+++ b/app.json
@@ -30,6 +30,9 @@
       "eas": {
         "projectId": "9dc7236b-fe92-4836-be55-8cddf3c7ca8e"
       }
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
