--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.73.6",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "^3.6.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
