--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo": "~50.0.17",
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
+    "expo-router": "^3.4.9",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -30,8 +30,8 @@
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modal-dropdown": "^1.0.2",
-    "react-native-pie-chart": "^3.0.2",
     "react-native-paper": "^5.12.3",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
