--- a/eas.json
+++ b/eas.json
@@ -1,11 +1,16 @@
 {
   "cli": {
-    "version": ">= 7.8.5"
+    "version": ">= 8.0.0"
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal"
+    },
+    "apkPreview":{
+      "android":{
+        "buildType":"apk"
+      }
     },
     "preview": {
       "distribution": "internal"
