--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
     "expo-router": "^3.4.10",
+    "expo-splash-screen": "^0.26.5",
     "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "^2.9.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,7 +40,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
