--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.7",
-    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.17",
+    "expo": "^50.0.19",
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
     "expo-router": "^3.4.10",
