--- a/package.json
+++ b/package.json
@@ -9,43 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "^3.2.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^50.0.19",
-    "expo-constants": "~15.4.6",
-    "expo-linking": "~6.2.2",
-    "expo-router": "^3.4.10",
-    "expo-splash-screen": "^0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "^2.9.4",
+    "expo": "^51.0.12",
+    "expo-constants": "^16.0.2",
+    "expo-linking": "^6.3.1",
+    "expo-router": "~3.5.16",
+    "expo-splash-screen": "^0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.73.6",
+    "react-native": "^0.74.2",
     "react-native-check-box": "^2.1.7",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.10.4",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-pie-chart": "^3.0.2",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "start": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
